--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 								</ul>
 
 								<div class="responsive-menu-additional-components d-xl-none d-lg-none d-md-flex d-flex">
+									<div class="header-cta-btn">
+										<a href="javascript:void(0);" class="btn btn-primary">START YOUR PROJECT</a>
+									</div>
 									<div class="header-social-links responsive-header-social-btn mb-2">
 										<a href="javascript:void(0);"><i class="lab la-facebook-f"></i></a>
 										<a href="javascript:void(0);"><i class="lab la-instagram"></i></a>
@@ -1049,7 +1052,7 @@
 										<a href="mailto:office@alrremodeling.com">office@alrremodeling.com</a>
 									</li>
 									<li>
-										<span><i class="las la-envelope"></i></span>
+										<span><i class="las la-calendar"></i></span>
 										<p>
 											Sunday - Thursday: 9AM - 6PM<br>
 											Friday: 9AM - 3PM<br>
