--- a/project.html
+++ b/project.html
@@ -177,7 +177,7 @@
                         <div class="filters">
 
                             <ul>
-                                <li class="activefilter" data-filter=".all">All</li>
+                                <li class="activefilter" data-filter="*">All</li>
                                 <li data-filter=".kitchen-remodeling">Kitchen Remodeling</li>
                                 <li data-filter=".roofing">Roofing</li>
                                 <li data-filter=".landscape">Landscape</li>
@@ -196,8 +196,9 @@
                             <div class="project-iteam">
                                 <div class="pic">
                                     <a href="assets/images/kitchen-remodeling-service-thumbnail.png"
-                                        data-fancybox="gallery" class="gallery-box holder">
+                                        data-fancybox="Winnetka" class="gallery-box holder">
                                         <img src="assets/images/kitchen-remodeling-service-thumbnail.png" alt="">
+                                        <p>Winnetka <span>50 Photos</span></p>
                                     </a>
                                 </div>
                             </div>
@@ -207,9 +208,10 @@
                         <div class="col-sm-4 all roofing">
                             <div class="project-iteam">
                                 <div class="pic">
-                                    <a href="assets/images/beautiful-designs.png" data-fancybox="gallery"
+                                    <a href="assets/images/beautiful-designs.png" data-fancybox="Winnetka"
                                         class="gallery-box holder">
                                         <img src="assets/images/beautiful-designs.png" alt="">
+                                        <p>Winnetka <span>50 Photos</span></p>
                                     </a>
                                 </div>
                             </div>
@@ -219,9 +221,10 @@
                         <div class="col-sm-4 all landscape">
                             <div class="project-iteam">
                                 <div class="pic">
-                                    <a href="assets/images/landscape-thumbnail.png" data-fancybox="gallery"
+                                    <a href="assets/images/landscape-thumbnail.png" data-fancybox="San Bernardino"
                                         class="gallery-box holder">
                                         <img src="assets/images/landscape-thumbnail.png" alt="">
+                                        <p>San Bernardino <span>20 Photos</span></p>
                                     </a>
                                 </div>
                             </div>
@@ -231,9 +234,10 @@
                         <div class="col-sm-4 all exterior-paint">
                             <div class="project-iteam">
                                 <div class="pic">
-                                    <a href="assets/images/exterior-paint-thumbnail.png" data-fancybox="gallery"
+                                    <a href="assets/images/exterior-paint-thumbnail.png" data-fancybox="Temecula"
                                         class="gallery-box holder">
                                         <img src="assets/images/exterior-paint-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
                                     </a>
                                 </div>
                             </div>
@@ -243,14 +247,211 @@
                         <div class="col-sm-4 all bathroom">
                             <div class="project-iteam">
                                 <div class="pic">
-                                    <a href="assets/images/bathroom-remodeling-thumbnail.png" data-fancybox="gallery"
+                                    <a href="assets/images/bathroom-remodeling-thumbnail.png" data-fancybox="Temecula"
                                         class="gallery-box holder">
                                         <img src="assets/images/bathroom-remodeling-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
                                     </a>
                                 </div>
                             </div>
                         </div>
                         <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all kitchen-remodeling">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/kitchen-remodeling-service-thumbnail.png"
+                                        data-fancybox="Simi Valley" class="gallery-box holder">
+                                        <img src="assets/images/kitchen-remodeling-service-thumbnail.png" alt="">
+                                        <p>Simi Valley <span>50 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all roofing">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/beautiful-designs.png" data-fancybox="Winnetka"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/beautiful-designs.png" alt="">
+                                        <p>Winnetka <span>50 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all landscape">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/landscape-thumbnail.png" data-fancybox="San Bernardino"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/landscape-thumbnail.png" alt="">
+                                        <p>San Bernardino <span>20 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all exterior-paint">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/exterior-paint-thumbnail.png" data-fancybox="Temecula"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/exterior-paint-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all bathroom">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/bathroom-remodeling-thumbnail.png" data-fancybox="Temecula"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/bathroom-remodeling-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all kitchen-remodeling">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/kitchen-remodeling-service-thumbnail.png"
+                                        data-fancybox="Los Angeles, CA" class="gallery-box holder">
+                                        <img src="assets/images/kitchen-remodeling-service-thumbnail.png" alt="">
+                                        <p>Los Angeles, CA <span>50 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all roofing">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/beautiful-designs.png" data-fancybox="Winnetka"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/beautiful-designs.png" alt="">
+                                        <p>Winnetka <span>50 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all landscape">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/landscape-thumbnail.png" data-fancybox="San Bernardino"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/landscape-thumbnail.png" alt="">
+                                        <p>San Bernardino <span>20 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all exterior-paint">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/exterior-paint-thumbnail.png" data-fancybox="Temecula"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/exterior-paint-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all bathroom">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/bathroom-remodeling-thumbnail.png" data-fancybox="Temecula"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/bathroom-remodeling-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all kitchen-remodeling">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/kitchen-remodeling-service-thumbnail.png"
+                                        data-fancybox="San Fernando Valley" class="gallery-box holder">
+                                        <img src="assets/images/kitchen-remodeling-service-thumbnail.png" alt="">
+                                        <p>San Fernando Valley <span>50 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all roofing">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/beautiful-designs.png" data-fancybox="Winnetka"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/beautiful-designs.png" alt="">
+                                        <p>Winnetka <span>50 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all landscape">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/landscape-thumbnail.png" data-fancybox="San Bernardino"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/landscape-thumbnail.png" alt="">
+                                        <p>San Bernardino <span>20 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all exterior-paint">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/exterior-paint-thumbnail.png" data-fancybox="Temecula"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/exterior-paint-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+                        <!-- col -->
+                        <div class="col-sm-4 all bathroom">
+                            <div class="project-iteam">
+                                <div class="pic">
+                                    <a href="assets/images/bathroom-remodeling-thumbnail.png" data-fancybox="Temecula"
+                                        class="gallery-box holder">
+                                        <img src="assets/images/bathroom-remodeling-thumbnail.png" alt="">
+                                        <p>Temecula Bernardino <span>15 Photos</span></p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col -->
+
                     </div>
                 </div>
             </div>
